# trend-scout-super-agent

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION-SUMMARY.md  PROJECT-DETAIL.md  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: backfill-history.py  crawl-knowledge.py  seed-kol-registry.py  train-authenticity-model.py
src/: __init__.py  main.py  models.py
src/collectors/: __init__.py  base.py  discord.py  github.py  hackernews.py  huggingface.py  producthunt.py  twitter.py
src/delivery/: __init__.py  telegram.py
src/digest/: __init__.py  formatter.py  ranker.py  synthesizer.py
src/knowledge/: crawler.py  embedder.py  parser.py  updater.py
src/nlp/: __init__.py  clone_detector.py  sentiment.py  topic_modeler.py
src/scoring/: __init__.py  authenticity_filter.py  basic_scorer.py  composite_scorer.py  contributor_scorer.py  fork_ratio_scorer.py  github_scorer.py  hn_scorer.py  issue_health_scorer.py  kol_registry.py  kol_scorer.py  kol_weight_learner.py  momentum_scorer.py  readme_quality_scorer.py  release_cadence_scorer.py  velocity_scorer.py
src/storage/: __init__.py  db.py  kol_registry.json
src/utils/: __init__.py  config.py  ids.py  logger.py  rate_limiter.py
tests/unit/: test_authenticity_filter.py  test_db.py  test_db_archive.py  test_digest_formatter.py  test_digest_synthesizer.py  test_github_scorer.py  test_hn_scorer.py  test_kol_registry.py  test_kol_scorer.py  test_main.py  test_raw_signal.py  test_sentiment.py  test_signal_history_command.py  (+1 more)
