[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-scout-agent"
version = "0.1.0"
description = "Autonomous trend intelligence agent for GitHub, Hacker News, X, Product Hunt, and HuggingFace."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "click>=8.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.0",
  "structlog>=24.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-recording>=0.13.4",
  "mypy>=1.9",
  "ruff>=0.0.287"
]

[project.scripts]
trend-scout = "src.main:cli"
